--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = [
+    "@oz/=lib/openzeppelin-contracts/contracts/",
+    "@ozu/=lib/openzeppelin-contracts-upgradeable/contracts/"
+]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
