--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,8 @@ out = "out"
 libs = ["lib"]
 remappings = [
     "@oz/=lib/openzeppelin-contracts/contracts/",
-    "@ozu/=lib/openzeppelin-contracts-upgradeable/contracts/"
+    "@ozu/=lib/openzeppelin-contracts-upgradeable/contracts/",
+    "@lady/=lib/solady/src/"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
